v2.7.0/compilers/compilers_galaxy_llm.md
# ARCHITECTURAL_BRIEF: compilers
> INSTRUCTION: Deterministic Syntactic Analysis. Base architectural insights on Structural Magnitude, Extracted Signatures, and Risk overlays.

## 0. FORENSIC TRACEABILITY
| Metadata | Value |
|---|---|
| **Engine** | `GitGalaxy Scope vlatest (Delta Mode)` |
| **Git Remote** | `N/A` |
| **Zero-Dependency Mode** | `Inactive (Full Precision)` |

## 0.5 AI THREAT AUDIT STATUS
> **✅ SECURE_NO_THREATS_DETECTED**
> XGBoost Structural Signatures model found no malicious artifacts.

## 1. SYSTEM ROLE & PHILOSOPHY
> You are a Senior Technical Storyteller and Codebase Architect. GitGalaxy has translated the non-visual architecture of this repository into measurable Structural Signatures (regex-derived counts, not an AST or compiler pass). Your job is to weave those signatures into a coherent, factual narrative about how this system is built -- its architecture, design patterns, and complexity -- not to render a verdict.
> 
> **CORE DIRECTIVES:**
> 1. **Narrate the Architecture, Don't Judge the Author:** Frame every observation as a blameless description of the system's physical reality. A high Structural Surface Profile reading (formerly called Risk Exposure; e.g., Complexity Load, formerly Cognitive Load Exposure) describes where the architecture may be drifting into fragile territory, not developer incompetence -- it is a prompt to investigate, never a verdict. These are activity/content surface meters, not defect-probability estimates (gitgalaxy#2991, evidence in #2982) -- describe what is there, don't imply it predicts a bug.
> 2. **The Physical Reality Rule:** Base your narrative strictly on the provided Structural Signatures and the numbers derived from them. Do not hallucinate meaning, and do not restate a heuristic's raw label (e.g. a 'Logic Bomb' or 'O(2^N)' flag) as a confirmed finding of malice or a guaranteed defect -- explain what the signature actually measures, weave it into the story of the file, and let the reader draw their own conclusion.
> 3. **Risk vs. Defense:** Code is a balance. A file with high `flux` (state mutation) is risky unless balanced by `freeze_hits` (immutability). High `danger` is brittle unless wrapped in `safety`. Tell that balance as part of the narrative, not as an isolated alarm.
> 
> **THE STRUCTURAL SIGNATURE LEXICON:**
> * **Structure & Mass:** `branch` (splits), `linear` (paths), `args` (coupling), `func_start` (entry points).
> * **Risk & Volatility:** `danger` (dynamic execution), `flux` (state mutation), `graveyard` (commented-out logic), `safety_neg` (security bypasses).
> * **Architecture & Domain:** `io` (network latency), `concurrency` (async orchestration), `api` (public surface), `import` (dependencies).
> * **Defensive Guardrails:** `safety` (Error handling), `freeze_hits` (immutability), `cleanup` (state destruction).
## 2. THE 13-POINT STRUCTURAL SURFACE PROFILE (formerly Risk Exposure) ANALYSIS (EQUATIONS & CONTEXT)
> **How the SAST Engine Calculates the Structural Surface Profile (Lower 0 - Higher Surface Presence 100%):**
> Most scores use a Sigmoid curve based on density (Hits / LOC) to prevent massive files from mathematically hiding their flaws. These 13 vectors are activity/content surface meters -- they describe what is present in a file, not the probability of a defect. The temporal-crucible validation record (gitgalaxy#2982, ~3,550 scanned snapshots, two repositories, pre-registered) tested the per-file-standing-risk claim to exhaustion and found it does not hold; see docs/vectors.md for the full record and gitgalaxy#2991 for the rename this drove. `risk_*` names remain the underlying column/key names for schema compatibility -- see the 'formerly' aliases below.
> 
> 1. **Complexity Load** (formerly Cognitive Load Exposure)**:** Measures the mental effort required for a developer to read and understand the file. `Density(Branches + (Flux * 2) + Async/Danger)` mitigated by `Doc Coverage`.
> 2. **Guard Balance** (formerly Error & Exception Risk Exposure)**:** Measures structural integrity and resilience against runtime errors. `Net Exposure = (Danger + Safety_Neg + Flux) - (Safety + Tests + Docs)`.
> 3. **Debt Markers** (formerly Tech Debt Exposure)**:** Measures the density of developer-annotated structural stress. `Density(TODOs [1x] + FIXMEs/Hacks [3x] + Empty Stubs [0.5x])`.
> 4. **Test Surface** (formerly Verification Risk Exposure)**:** Evaluates test coverage by comparing a function's structural complexity against the scope of the tests validating it.
> 5. **Connectivity** (formerly API Risk Exposure)**:** Measures the public surface area of a module. `Ratio(API Hits / Total Functions & Classes)`.
> 6. **Concurrency Surface** (formerly Concurrency Risk Exposure)**:** Measures the density of asynchronous operations, threading, and parallel execution logic.
> 7. **Mutation Surface** (formerly State Flux Risk Exposure)**:** Measures the frequency of data mutation and variable reassignment.
> 8. **Dead Code Surface** (formerly Commented Logic (dead code))**:** Measures the presence of abandoned, commented-out logic blocks.
> 9. **Spec Alignment** (formerly Spec Match Risk Exposure)**:** Measures how closely code aligns with formal specifications or architectural requirements.
> 10. **Historical Stability** (formerly Stability; predictive layer, promotion pending #2987)**:** Measures the recency of edits relative to the repository's entire lifespan. Part of the family the validation record actually supports as predictive -- currently ablated to zero in every scan (`GITGALAXY_DISABLE_GIT_HISTORY`, temporal-crucible#29).
> 11. **Historical Churn** (formerly Deep Churn; predictive layer, promotion pending #2987)**:** Measures the historical volatility and frequency of modification. Same predictive-layer status and ablation caveat as Historical Stability above.
> 12. **Documentation Surface** (formerly Documentation Risk Exposure)**:** Of the units extracted from a file, the weight-share a reader cannot recover from documentation -- public units count double, runtime-dynamic units count more, and a folder-level documentation umbrella shields the whole file. A ratio over units, not a density over lines; files with no extracted units have no value.
> 13. **Indentation Consistency:** Measures formatting alignment (Tabs vs. Spaces). Provided for codebase standardization context, not a functional risk.
> 
> **--- THE SECURITY & VULNERABILITY LENS ---**
> 14. **Obfuscation & Evasion Risk:** Measures the density of obfuscated logic, packed strings, and non-standard encoding.
> 15. **Logic Bomb / Sabotage Risk:** Measures condition-heavy execution leading to destructive OS, memory, or process commands.
> 16. **Injection Surface Risk Exposure:** Measures external network/I/O input flowing directly into dynamic execution contexts (XSS, SQLi, RCE).
> 17. **Memory Corruption Risk Exposure:** Measures the density of raw pointer math and manual memory allocations (Buffer Overflows, UAF).
> 18. **Credential Material** (formerly Secrets Risk Exposure)**:** Measures the presence of hardcoded credentials exposed to logs or globals.
> 
> **--- STRUCTURAL MAGNITUDE (NOT RISK) ---**
> **19. Function Magnitude (Impact Score):** Measures the physical footprint and 'heaviness' of a specific function. `((BranchHits + 1) * (Args + 1) + (0.05 * LOC)) * 10`. This is NOT a risk score.
> **20. File Magnitude (Total Impact):** Measures the total structural impact of a file. `Sum(Function Impacts) + API + Concurrency + Flux + (LOC / 50)`. This is NOT a risk score.

## 3. MACRO STATE
| Metric | Value |
|---|---|
| Total Artifacts | 5 |
| Analyzed Artifacts (Scanned) | 5 |
| Excluded Artifacts (Unparsable data, binaries, unsupported formats) | 0 |
| Total LOC | 777 |
| Volatility Index | 0.0 |
| % Scanned of codebase = | 100.0% |
| Dominant Lang | JCL |

## 3.5 MACRO-NETWORK TOPOLOGY (Resilience & Coupling)
| Metric | Value | Interpretation |
|---|---|---|
| Modularity | 0.0 | High = Clean micro-boundaries. Low = Spaghetti coupling. |
| Assortativity | 0.0 | Positive = Resilient core. Negative = Fragile single-points-of-failure. |
| Cyclic Density | 0.0% | % of files trapped in dependency loops (Static Friction). |
| Avg Path Length | 0.0 | Hops between files. Lower = Tighter coupling. |
| Articulation Pts | 0 | Number of single files that, if removed, shatter the network. |

## 4. COMPOSITION
| Lang | Files | LOC | Share |
|---|---|---|---|
| JCL | 5 | 777 | 100.0% |

## 4.5 REPOSITORY ECOSYSTEM BASELINE (GLOBAL ARCHITECTURE)
> **Assigned Ecosystem Baseline:** `Cluster 3`
> **Architectural Drift Z-Score:** `2.272`
> **⚠️ UNIQUE INTERPRETATION:** This repository has a high Z-Score. While it maps closest to this archetype, its internal structure is a highly unique or hybrid interpretation of the pattern.

## 4.6 FILE ARCHETYPES & STATIC ASSETS
### Active Execution Logic (ML Clusters)
| Archetype | Count | Repo % |
|---|---|---|
| Unclassified | 5 | 100.0% |

## 5. EXCLUDED ARTIFACTS (Unparsable or Shielded Files)
*Total Excluded Artifacts: 0*


## 6. STRUCTURAL SURFACE PROFILE (formerly Risk Exposure) ANALYSIS (0-100%)
| Structural Surface Vector | Min | Max | Mean | Med | Mode |
|---|---|---|---|---|---|
| Complexity Load (formerly Cognitive Load Exposure) | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |
| Guard Balance (formerly Error & Exception Exposure) | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |
| Debt Markers (formerly Tech Debt Exposure) | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |
| Test Surface (formerly Testing Exposure) | 2.3 | 2.3 | 2.3 | 2.3 | 2.3 |
| Connectivity (formerly API Exposure) | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |
| Concurrency Surface (formerly Concurrency Exposure) | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |
| Mutation Surface (formerly State Flux Exposure) | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |
| Dead Code Surface (formerly Commented Logic Exposure) | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |
| Spec Alignment (formerly Specification Exposure) | 100.0 | 100.0 | 100.0 | 100.0 | 100.0 |
| Historical Stability (predictive layer, promotion pending #2987) (formerly Instability Exposure) | 50.0 | 50.0 | 50.0 | 50.0 | 50.0 |
| Historical Churn (predictive layer, promotion pending #2987) (formerly Volatility Exposure) | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |
| Doc Surface (formerly Documentation Exposure) | 100.0 | 100.0 | 100.0 | 100.0 | 100.0 |
| Credential Material (formerly Hardcoded Payload Artifacts) | 0.0 | 0.0 | 0.0 | 0.0 | 0.0 |

## 6b. SURFACE FAMILY PROFILE (Tier 1/2/3 -- gitgalaxy#2994)
> Percentile columns elsewhere in this brief that come from the Tier-2 snapshot percentiles are SNAPSHOT-RELATIVE: "87" means this file's value sits at the 87th percentile of THIS repo's files for that surface -- true by construction (Hazen average-rank), not a calibrated 0-100 risk threshold like the section 6 sigmoid scores above. An all-zero surface across the whole repo reads as 0.0 for every file, never a false-median 50.
| Family | Repo Total | Files w/ Signal | P90 File Value | Top File |
|---|---|---|---|---|
| memory | 0 | 0 | 0 | - |
| cleanup | 0 | 0 | 0 | - |
| guards | 0 | 0 | 0 | - |
| danger | 0 | 0 | 0 | - |
| concurrency | 13 | 5 | 3 | `BUILD_BIGFIVE.jcl` |
| connectivity | 0 | 0 | 0 | - |
| io | 19 | 5 | 5 | `BUILD_TKBIG5.jcl` |
| crypto | 0 | 0 | 0 | - |
| ipc | 0 | 0 | 0 | - |
| time | 0 | 0 | 0 | - |
| serialization | 0 | 0 | 0 | - |
| regex | 0 | 0 | 0 | - |
| events | 10 | 5 | 2 | `BUILD_BIGFIVE.jcl` |
| tests | 0 | 0 | 0 | - |
| docs | 0 | 0 | 0 | - |
| debt | 0 | 0 | 0 | - |
| mutation | 66 | 5 | 17 | `BUILD_TKBIG5.jcl` |
| dead_code | 0 | 0 | 0 | - |
| credential | 0 | 0 | 0 | - |
| threat | 0 | 0 | 0 | - |
| ml_ai | 0 | 0 | 0 | - |
| ui | 0 | 0 | 0 | - |

**Relations (repo medians):**
- `guard_balance_ratio` (guards / (danger + 1)): **0.0**
- `alloc_cleanup_pairing` (cleanup / (memory + 1)): **0.0**

## 7. ARCHITECTURAL CHOKE POINTS & DEPENDENCIES
### Top I/O Latency Risks
- `BUILD_TKBIG5.jcl` (Hits: 5)
- `BUILD_BIGFIVE.jcl` (Hits: 4)
- `BUILD_DIRTY02.jcl` (Hits: 4)

### Top 5 Structural Pillars (Highest 'Imported By' / Blast Radius)
No file in this repository is imported by another file that GitGalaxy could resolve, so there is no blast-radius ranking to report. That is itself a finding: either the codebase genuinely has no internal dependency structure (a collection of scripts, documents or configuration rather than a coupled system), or its import style is one the engine does not resolve for this language. Do not infer that any file is load-bearing from this section.


### Top 5 Orchestrators (Highest 'Imports' / Fragility Index)
These files pull in the most external dependencies. They are highly coupled and fragile to API changes.

1. **BUILD_BIGFIVE.jcl** (`BUILD_BIGFIVE.jcl`) — 3 outbound dependencies
2. **BUILD_DIRTY02.jcl** (`BUILD_DIRTY02.jcl`) — 3 outbound dependencies
3. **BUILD_TKBIG5.jcl** (`BUILD_TKBIG5.jcl`) — 3 outbound dependencies
4. **BUILD_CLEAN01.jcl** (`BUILD_CLEAN01.jcl`) — 2 outbound dependencies
5. **BUILD_DIRTY03.jcl** (`BUILD_DIRTY03.jcl`) — 2 outbound dependencies

## 8. CORE FUNCTION HITLIST (Heaviest Functions)
> *Note: The 'Impact' metric below represents Structural Magnitude (complexity, arguments, and length), NOT operational risk. These are the load-bearing pillars of the logic.*

- `ALLOC` (@ `BUILD_BIGFIVE.jcl`) -> Impact: **1.5** | LOC: 10
  * *Intent:* //BLDBIGF JOB (12345),'GITGALAXY COMPILER', // CLASS=A,MSGCLASS=A,MSGLEVEL=(1,1), // USER=HERC01,PASSWORD=CUL8TR //* =================================...
- `COMPILE` (@ `BUILD_BIGFIVE.jcl`) -> Impact: **1.5** | LOC: 163
  * *Intent:* //* ========================================================== //ALLOC EXEC PGM=IEFBR14 //LOADLIB DD DSN=HERC01.LOADLIB,DISP=(MOD,CATLG,DELETE), // UN...
- `COMPILE` (@ `BUILD_CLEAN01.jcl`) -> Impact: **1.5** | LOC: 22
  * *Intent:* // USER=HERC01,PASSWORD=CUL8TR //* ========================================================== //* PHASE 1: INFRASTRUCTURE PROVISIONING (IEFBR14) //* =...
- `ALLOC` (@ `BUILD_DIRTY02.jcl`) -> Impact: **1.5** | LOC: 10
  * *Intent:* //BLDDIRT JOB (12345),'GITGALAXY COMPILER', // CLASS=A,MSGCLASS=A,MSGLEVEL=(1,1), // USER=HERC01,PASSWORD=CUL8TR //* =================================...
- `COMPILE` (@ `BUILD_DIRTY02.jcl`) -> Impact: **1.5** | LOC: 35
  * *Intent:* //* ========================================================== //ALLOC EXEC PGM=IEFBR14 //LOADLIB DD DSN=HERC01.LOADLIB,DISP=(MOD,CATLG,DELETE), // UN...
- `COMPILE` (@ `BUILD_DIRTY03.jcl`) -> Impact: **1.5** | LOC: 24
  * *Intent:* // USER=HERC01,PASSWORD=CUL8TR //* ========================================================== //* PHASE 1: INFRASTRUCTURE PROVISIONING (IEFBR14) //* =...
- `ALLOC` (@ `BUILD_TKBIG5.jcl`) -> Impact: **1.5** | LOC: 10
  * *Intent:* //BLDTKBI JOB (12345),'GITGALAXY COMPILER', // CLASS=A,MSGCLASS=A,MSGLEVEL=(1,1), // USER=HERC01,PASSWORD=CUL8TR //* =================================...
- `COMPILE` (@ `BUILD_TKBIG5.jcl`) -> Impact: **1.5** | LOC: 163
  * *Intent:* //* ========================================================== //ALLOC EXEC PGM=IEFBR14 //LOADLIB DD DSN=HERC01.LOADLIB,DISP=(MOD,CATLG,DELETE), // UN...
- `ALLOC` (@ `BUILD_CLEAN01.jcl`) -> Impact: **1.4** | LOC: 7
  * *Intent:* //BLDCLEA JOB (12345),'GITGALAXY COMPILER', // CLASS=A,MSGCLASS=A,MSGLEVEL=(1,1), // USER=HERC01,PASSWORD=CUL8TR //* =================================...
- `ALLOC` (@ `BUILD_DIRTY03.jcl`) -> Impact: **1.4** | LOC: 7
  * *Intent:* //BLDDIRT JOB (12345),'GITGALAXY COMPILER', // CLASS=A,MSGCLASS=A,MSGLEVEL=(1,1), // USER=HERC01,PASSWORD=CUL8TR //* =================================...

## 9. DIRECTORY GROUPS (Top 10 Heaviest Modules)
| Folder Path | Files | Total Impact | Avg Complexity Load | Avg Debt Markers |
|---|---|---|---|---|
| `__monolith__` | 5 | 30.34 | 0.0% | 0.0% |

## 10. TARGETED STRUCTURAL SURFACE VECTORS (formerly Risk Vectors, Top 5 by Surface)

## 10.5 AI THREAT INTELLIGENCE (XGBoost)
*No files met the threshold for malicious structural signatures.*

## 10.6 WEAPONIZABLE SURFACE EXPOSURES (RULE-BASED SAST)
> Secondary Evidence: The following files tripped specific static threat signatures. Use these to explain *why* the XGBoost model flagged the files above.

*No critical vulnerabilities or security lens thresholds breached.*

## 10.7 ECOSYSTEM SECURITY AUDITS
> **AI CONTEXT:** High-level perimeter defense metrics from the X-Ray, Supply Chain Firewall, and API Network Mapper.

### ☢️ X-Ray & 🧱 Supply Chain Firewall
- **Binary Anomalies (X-Ray):** `0` (High entropy, packed payloads, or magic byte mismatches).
- **Blacklisted Dependencies:** `0` explicitly banned packages imported.
- **Unknown Dependencies:** `13` packages imported that bypass the Zero-Trust whitelist.

## 11. CUMULATIVE RISK HITLIST (Top 10 Highest Risk Files)
> Cumulative Risk is the sum of all individual risk exposures. These files represent the highest multi-dimensional technical debt and architectural fragility.

### 1. `BUILD_CLEAN01.jcl` (JCL) -> Cumulative Risk: **252.34**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 3.6 | **LOC:** 44 | **CtrlFlow:** 0.0% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Documentation (100.0%), Stability (50.0%), Verification (2.3404%)
- **Heaviest Functions:** `COMPILE` (Impact: 1.5), `ALLOC` (Impact: 1.4)

### 2. `BUILD_DIRTY03.jcl` (JCL) -> Cumulative Risk: **252.34**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 3.68 | **LOC:** 48 | **CtrlFlow:** 0.0% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Documentation (100.0%), Stability (50.0%), Verification (2.3404%)
- **Heaviest Functions:** `COMPILE` (Impact: 1.5), `ALLOC` (Impact: 1.4)

### 3. `BUILD_DIRTY02.jcl` (JCL) -> Cumulative Risk: **252.34**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 4.08 | **LOC:** 63 | **CtrlFlow:** 0.0% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Documentation (100.0%), Stability (50.0%), Verification (2.3386%)
- **Heaviest Functions:** `ALLOC` (Impact: 1.5), `COMPILE` (Impact: 1.5)

### 4. `BUILD_BIGFIVE.jcl` (JCL) -> Cumulative Risk: **252.3**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 9.48 | **LOC:** 369 | **CtrlFlow:** 0.0% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Documentation (100.0%), Stability (50.0%), Verification (2.3045%)
- **Heaviest Functions:** `ALLOC` (Impact: 1.5), `COMPILE` (Impact: 1.5)

### 5. `BUILD_TKBIG5.jcl` (JCL) -> Cumulative Risk: **252.3**
- **Archetype:** `Unclassified` (Distance: N/A IQR)
- **Magnitude:** 9.5 | **LOC:** 370 | **CtrlFlow:** 0.0% | **Authorship Centralization:** 0.0%
- **Primary Risk Drivers:** Spec Match (100.0%), Documentation (100.0%), Stability (50.0%), Verification (2.3045%)
- **Heaviest Functions:** `ALLOC` (Impact: 1.5), `COMPILE` (Impact: 1.5)

## 12. SCANNED ARTIFACTS HITLIST (Top 25 Heaviest Files)
> *Note: 'Magnitude' represents the file's total Structural Magnitude and impact within the system. It is independent of its Risk Profile. High magnitude implies high structural importance and centralization.*

### `BUILD_TKBIG5.jcl` (JCL | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 9.5 | **LOC:** 370 | **CtrlFlow:** 0.0% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (0.0%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `ALLOC` (Impact: 1.5)
    * *Intent:* //BLDTKBI JOB (12345),'GITGALAXY COMPILER', // CLASS=A,MSGCLASS=A,MSGLEVEL=(1,1), // USER=HERC01,PAS...
  * `COMPILE` (Impact: 1.5)
    * *Intent:* //* ========================================================== //ALLOC EXEC PGM=IEFBR14 //LOADLIB DD...
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `structural_boundaries: 3`, `func_start: 2`, `class_start: 1`
* *Risk/State:* None
* *Architecture:* `io: 5`
* *Defense:* `sync_locks: 3`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 200.0
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` HERC01.DATA.TSTRAITS, HERC01.DATA.UTSSTMTS, HERC01.LOADLIB
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `BUILD_BIGFIVE.jcl` (JCL | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 9.48 | **LOC:** 369 | **CtrlFlow:** 0.0% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (0.0%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `ALLOC` (Impact: 1.5)
    * *Intent:* //BLDBIGF JOB (12345),'GITGALAXY COMPILER', // CLASS=A,MSGCLASS=A,MSGLEVEL=(1,1), // USER=HERC01,PAS...
  * `COMPILE` (Impact: 1.5)
    * *Intent:* //* ========================================================== //ALLOC EXEC PGM=IEFBR14 //LOADLIB DD...
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `structural_boundaries: 3`, `func_start: 2`, `class_start: 1`
* *Risk/State:* None
* *Architecture:* `io: 4`
* *Defense:* `sync_locks: 3`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 200.0
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` HERC01.DATA.TSTRAITS, HERC01.DATA.UTSSTMTS, HERC01.LOADLIB
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `BUILD_DIRTY02.jcl` (JCL | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 4.08 | **LOC:** 63 | **CtrlFlow:** 0.0% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (0.0%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `ALLOC` (Impact: 1.5)
    * *Intent:* //BLDDIRT JOB (12345),'GITGALAXY COMPILER', // CLASS=A,MSGCLASS=A,MSGLEVEL=(1,1), // USER=HERC01,PAS...
  * `COMPILE` (Impact: 1.5)
    * *Intent:* //* ========================================================== //ALLOC EXEC PGM=IEFBR14 //LOADLIB DD...
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `structural_boundaries: 3`, `func_start: 2`, `class_start: 1`
* *Risk/State:* None
* *Architecture:* `io: 4`
* *Defense:* `sync_locks: 3`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 200.0
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` HERC01.DATA.SDIRTOUT, HERC01.DATA.TSCLNOUT, HERC01.LOADLIB
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `BUILD_DIRTY03.jcl` (JCL | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 3.68 | **LOC:** 48 | **CtrlFlow:** 0.0% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (0.0%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `COMPILE` (Impact: 1.5)
    * *Intent:* // USER=HERC01,PASSWORD=CUL8TR //* ========================================================== //* PH...
  * `ALLOC` (Impact: 1.4)
    * *Intent:* //BLDDIRT JOB (12345),'GITGALAXY COMPILER', // CLASS=A,MSGCLASS=A,MSGLEVEL=(1,1), // USER=HERC01,PAS...
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `structural_boundaries: 2`, `func_start: 2`, `class_start: 1`
* *Risk/State:* None
* *Architecture:* `io: 3`
* *Defense:* `sync_locks: 2`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 200.0
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` HERC01.DATA.SDIRTOUT, HERC01.LOADLIB
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

### `BUILD_CLEAN01.jcl` (JCL | Tier 2 | AI Safe: 0.0%)
- **Global Archetype:** `Unclassified` (Drift: 0.0 IQR)
- **Magnitude:** 3.6 | **LOC:** 44 | **CtrlFlow:** 0.0% | **Authorship Centralization:** 0.0%
- **Risk Profile:** Cognitive Load (0.0%), Tech Debt (0.0%)
**Top Internal Functions/Classes:**
  * `COMPILE` (Impact: 1.5)
    * *Intent:* // USER=HERC01,PASSWORD=CUL8TR //* ========================================================== //* PH...
  * `ALLOC` (Impact: 1.4)
    * *Intent:* //BLDCLEA JOB (12345),'GITGALAXY COMPILER', // CLASS=A,MSGCLASS=A,MSGLEVEL=(1,1), // USER=HERC01,PAS...
**Structural Signatures (Net Mitigated Signals):**
* *Structure:* `structural_boundaries: 2`, `func_start: 2`, `class_start: 1`
* *Risk/State:* None
* *Architecture:* `io: 3`
* *Defense:* `sync_locks: 2`
* *Network Topology:*
  * `Ecosystem Role:` Isolated/Orphan | `Dependency Blast Radius (PageRank):` 200.0
  * `Choke Point (Betweenness):` 0.0 | `Ripple Effect (Closeness):` 0.0
  * `Imports (Out-Degree: 0):` HERC01.DATA.TSCLNOUT, HERC01.LOADLIB
  * `Imported By (In-Degree: 0):` None (Orphan / Entrypoint)

## 13. ARCHITECTURAL DRIFT ANOMALIES & ANTI-PATTERNS
> **AI CONTEXT:** Pay close attention to 'Anti-Pattern' files. These files blend in globally (Low Global Drift), but heavily violate the standard conventions of their native programming language (High Local Drift). 'Mixed-Responsibility' files sit perfectly between two global archetypes (Delta <= 0.9 IQR), indicating a violation of the Single Responsibility Principle.

*No highly conflicted/drifting files detected within the 0.9 IQR threshold.*

## 13.5 STRATEGIC REFACTORING TARGETS (Volatility & Authorship Centralization)
> **AI CONTEXT:** Use these intersections to recommend pragmatic next steps. Risk is exponentially worse when combined with high churn (frequent edits) or high authorship centralization (single points of failure).

## 13.8 SYSTEMIC NETWORK BOTTLENECKS (N-Dimensional Topology)
> **AI CONTEXT:** These metrics cross-multiply Network Graph Theory against Risk Exposure to identify the exact mechanisms of runtime failure.

### 🙈 Opaque Critical Nodes (Dependency Blast Radius * Doc Risk)
These are 'Core Architecture Nodes' that the entire ecosystem relies upon, but they lack human intent, documentation, or ownership metadata. Modifying them is flying blind.

- `BUILD_BIGFIVE.jcl` -> **Severity: 20000.0** (Blast Radius: 200.0 * Doc Risk: 100.0%)
- `BUILD_CLEAN01.jcl` -> **Severity: 20000.0** (Blast Radius: 200.0 * Doc Risk: 100.0%)
- `BUILD_DIRTY02.jcl` -> **Severity: 20000.0** (Blast Radius: 200.0 * Doc Risk: 100.0%)
- `BUILD_DIRTY03.jcl` -> **Severity: 20000.0** (Blast Radius: 200.0 * Doc Risk: 100.0%)
- `BUILD_TKBIG5.jcl` -> **Severity: 20000.0** (Blast Radius: 200.0 * Doc Risk: 100.0%)

## AI SYSTEM INSTRUCTIONS (OUTPUT FORMAT)
> **CRITICAL TONE DIRECTIVE:** Stay in the Senior Technical Storyteller persona from Section 1. Use grounded, professional software engineering terminology (e.g., coupling, cohesion, technical debt, single responsibility) woven into a cohesive narrative -- not a dry, disconnected bullet-point audit. DO NOT use sci-fi, dramatic, or sensational jargon (e.g., 'Trojan', 'violently violates', 'parasitic', 'chimeric'). Be objective and factual, but write like you're explaining the codebase to a colleague, not filing a verdict.
> **When the user asks for an architectural review, structure your response using these directives:**
> 1. **Information Flow & Purpose (The Executive Summary):** Synthesize the overarching purpose of the codebase. Trace the information flow by analyzing the Top Dependencies ('Imports' and 'Imported By') and the Language Composition. Explain how the system's archetype drives its design, but only mention Z-Score deviations if they are highly abnormal.
> 2. **Notable Structures & Architecture:** Discuss the architecture based on the Dependency Graph. Identify the foundational load-bearers (highest inbound connections) versus the fragile orchestrators (highest outbound imports).
> 3. **Security & Vulnerabilities:** Immediately surface any critical threats flagged in the `AI THREAT INTELLIGENCE (XGBoost)` section. If none exist, briefly confirm the repository is secure from recognized structural threats.
> 4. **Outliers & Extremes:** Focus strictly on statistical anomalies. Highlight files or directory groups with massive Cumulative Risk, severe Z-Scores (Architectural Drift), or extreme spikes in individual risk vectors (like State Flux or Cognitive Load). Ignore normal, healthy code.
> 5. **Recommended Next Steps (Refactoring for Stability):** Provide 2-3 highly specific, pragmatic suggestions focused strictly on reducing outliers. Instruct the user on how to refactor high Z-score files, decouple massive central nodes, or mitigate extreme risk exposures to stabilize the system's architecture.
